margin spacing fix

--- a/civictechprojects/static/css/partials/_MainFooter.scss
+++ b/civictechprojects/static/css/partials/_MainFooter.scss
@@ -5,6 +5,9 @@
   margin-top: 20px;
   display: flex;
   flex-wrap: wrap;
+  h2, h3 {
+    margin-bottom: 0; // margin spacing is handled elsewhere in this section
+  }
 }
 .MainFooter-item {
   padding: 20px 0;
